# PvdA-RAG

./: .gitignore  RAG.py  README.md
src/: README.md  pyproject.toml
src/pvdarag/: __init__.py  rag.py
