[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pvdarag"]

[project]
name = "pvdarag"
version = "0.0.1"
authors = [
  { name="Bart", email="bart@example.com" },
]
description = "A PvdA-focused RAG system to support political Q&A"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
